force-app/main/default/objects/Property__c/fields/MonthlyLeaseCost__c.field-meta.xml
<CustomField>
    <fullName>MonthlyLeaseCost__c</fullName>
    <label>Monthly Lease Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>