force-app/main/default/objects/Property__c/fields/NetProfit__c.field-meta.xml
<CustomField>
    <fullName>NetProfit__c</fullName>
    <formula>TotalRevenue__c - TotalExpenses__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Net Profit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>