force-app/main/default/objects/Property__c/fields/StandardNightlyRate__c.field-meta.xml
<CustomField>
    <fullName>StandardNightlyRate__c</fullName>
    <label>Standard Nightly Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>