force-app/main/default/objects/Property__c/fields/TotalExpenses__c.field-meta.xml
<CustomField>
    <fullName>TotalExpenses__c</fullName>
    <label>Total Expenses</label>
    <summarizedField>Expense__c.Amount__c</summarizedField>
    <summaryForeignKey>Expense__c.Property__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>