force-app/main/default/objects/Property__c/fields/TotalRevenue__c.field-meta.xml
<CustomField>
    <fullName>TotalRevenue__c</fullName>
    <label>Total Revenue</label>
    <summarizedField>Booking__c.TotalPaidAmount__c</summarizedField>
    <summaryForeignKey>Booking__c.Property__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>