force-app/main/default/objects/Property__c/fields/WeeklyDiscountNightlyRate__c.field-meta.xml
<CustomField>
    <fullName>WeeklyDiscountNightlyRate__c</fullName>
    <label>Weekly Discount Nightly Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>