force-app/main/default/objects/Property__c/listViews/All_Properties.listView-meta.xml
<ListView>
    <fullName>All_Properties</fullName>
    <columns>NAME</columns>
    <columns>Status__c</columns>
    <columns>StandardNightlyRate__c</columns>
    <columns>TotalRevenue__c</columns>
    <columns>NetProfit__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Properties</label>
</ListView>